UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Analog_66BlockBracket__c.field-meta.xml
<CustomField>
    <fullName>ftr_Analog_66BlockBracket__c</fullName>
    <label>Analog 66 Block Bracket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>