UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Analog_HuntArrangement__c.field-meta.xml
<CustomField>
    <fullName>ftr_Analog_HuntArrangement__c</fullName>
    <label>Analog Hunt Arrangement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Circular</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>