UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Analog_NumOfHandoffs__c.field-meta.xml
<CustomField>
    <fullName>ftr_Analog_NumOfHandoffs__c</fullName>
    <label>Analog Number of Handoffs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>