UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Analog_TelHuntSeq__c.field-meta.xml
<CustomField>
    <fullName>ftr_Analog_TelHuntSeq__c</fullName>
    <label>Analog Telephone Number Hunt Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>