UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Central_Office__c.field-meta.xml
<CustomField>
    <fullName>ftr_Central_Office__c</fullName>
    <label>Central Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>