UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_DSAT_Id__c.field-meta.xml
<CustomField>
    <fullName>ftr_DSAT_Id__c</fullName>
    <formula>OrderItem__r.DSAT_Ticket_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSAT ID</label>
    <type>Text</type>
</CustomField>