UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_IAD_ConfigNotes__c.field-meta.xml
<CustomField>
    <fullName>ftr_IAD_ConfigNotes__c</fullName>
    <label>IAD Configuration Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>