UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_IAD_Handoff__c.field-meta.xml
<CustomField>
    <fullName>ftr_IAD_Handoff__c</fullName>
    <label>IAD Handoff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRI/T1</fullName>
            </value>
            <value>
                <fullName>Analog</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>