UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_IAD_InstallCables__c.field-meta.xml
<CustomField>
    <fullName>ftr_IAD_InstallCables__c</fullName>
    <label>Cables for all Installs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>