UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_IAD_PRI_Framing__c.field-meta.xml
<CustomField>
    <fullName>ftr_IAD_PRI_Framing__c</fullName>
    <label>IAD PRI Framing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>