UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_IAD_PRI_HandoffType__c.field-meta.xml
<CustomField>
    <fullName>ftr_IAD_PRI_HandoffType__c</fullName>
    <label>IAD PRI HandoffType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRI</fullName>
            </value>
            <value>
                <fullName>T1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>