UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_IAD_PRI_NumOfDigits__c.field-meta.xml
<CustomField>
    <fullName>ftr_IAD_PRI_NumOfDigits__c</fullName>
    <label>IAD PRI Number of Digits</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>