UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_IAD_RackMountKit__c.field-meta.xml
<CustomField>
    <fullName>ftr_IAD_RackMountKit__c</fullName>
    <label>IAD Rack Mount Kit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TA 900 19&quot; RM BRKT</fullName>
            </value>
            <value>
                <fullName>TA 900 23&quot; RM BRKT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>