UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Managed_IAD__c.field-meta.xml
<CustomField>
    <fullName>ftr_Managed_IAD__c</fullName>
    <label>Managed_IAD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adtran IAD TA908E</fullName>
            </value>
            <value>
                <fullName>Adtran IAD TA916E</fullName>
            </value>
            <value>
                <fullName>Adtran IAD TA924E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>