UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Managed_Router__c.field-meta.xml
<CustomField>
    <fullName>ftr_Managed_Router__c</fullName>
    <label>Managed Router</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CISCO ISR4321-SEC/K9 P/N:ISR4321-SEC/K9</fullName>
            </value>
            <value>
                <fullName>CISCO ISR4331-SEC/K9 P/N:ISR4331-SEC/K9</fullName>
            </value>
            <value>
                <fullName>CISCO ISR4431-SEC/K9 P/N:ISR4431-SEC/K9</fullName>
            </value>
            <value>
                <fullName>CISCO ISR4451-SEC/K9 P/N:ISR4451-SEC/K9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>