UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Mode__c.field-meta.xml
<CustomField>
    <fullName>ftr_Mode__c</fullName>
    <label>Mode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>