UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>ftr_Negotiation__c</fullName>
    <label>Negotiation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>