UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_PhysicalMedium__c.field-meta.xml
<CustomField>
    <fullName>ftr_PhysicalMedium__c</fullName>
    <label>Physical Medium</label>
    <length>100</length>
    <type>Text</type>
</CustomField>