UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Router_ShippingCity__c.field-meta.xml
<CustomField>
    <fullName>ftr_Router_ShippingCity__c</fullName>
    <label>Router Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>