UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Router_ShippingCountry__c.field-meta.xml
<CustomField>
    <fullName>ftr_Router_ShippingCountry__c</fullName>
    <label>Router Shipping Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>