UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Router_ShippingZipCode__c.field-meta.xml
<CustomField>
    <fullName>ftr_Router_ShippingZipCode__c</fullName>
    <label>Router Shipping Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>