UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Speed__c.field-meta.xml
<CustomField>
    <fullName>ftr_Speed__c</fullName>
    <label>Speed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>