UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Tech_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>ftr_Tech_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technical Supervisor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ftr_UNI_Location_Details</relationshipName>
    <type>Lookup</type>
</CustomField>