UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_Tech_Supervisor_Phone__c.field-meta.xml
<CustomField>
    <fullName>ftr_Tech_Supervisor_Phone__c</fullName>
    <label>Technical Supervisor Phone</label>
    <type>Phone</type>
</CustomField>