UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/ftr_WebRt_tkt_Number__c.field-meta.xml
<CustomField>
    <fullName>ftr_WebRt_tkt_Number__c</fullName>
    <label>WebRT Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>