UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_UNI_Location_Details__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>UNI Details for</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>UNI Location Details</relationshipLabel>
    <relationshipName>ftr_UNI_Location_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>